Add meta tags, sitemap, robots.txt e alterações de css e js

--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 <html lang="pt">
 <head>
 	<meta charset="UTF-8">
+	<meta name="google-site-verification" content="wfxMg5zoPpy9zbFbQDeRCSYU7WKy3NvqTZ9EHdAl7S4"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Elias Costa</title>
-	<link rel="stylesheet" href="css/estilos.css">
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat+Subrayada&display=swap&family=Codystar&family=Montserrat:ital,wght@0,400;1,300&display=swap&family=Roboto+Condensed:wght@300;700&display=swap&family=Roboto&display=swap&family=Roboto+Slab&family=Roboto:wght@100;300&family=Stardos+Stencil&display=swap" rel="stylesheet"> 
+	<meta name="keywords" content="Especialista em Marketing Político, Jornalista, Comunicador, Assessoria de Imprensa">
+	<meta name="robots" content="index, follow">	
+	<meta name="googlebot" content="index, follow">
+	<meta name="canonical" content="https://eliascosta.com.br/">
+	<meta name="description" content="Elias Costa é Jornalista, Especialista em Marketing Político e Comunicação Estratégica">
+	<title>Elias Costa - Jornalista, Especialista em Marketing Político e Comunicação Estratégica </title>
+
+	<link rel="icon" type="image/png" href="./favicon.ico"/>
+	<link rel="stylesheet" href="css/estilos.css">	
 	<link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/sweetalert2.min.css">
 	<link rel="stylesheet" href="css/bootstrap-4.4.1/bootstrap.min.css">
-	<script src="https://kit.fontawesome.com/c818a94a41.js" crossorigin="anonymous"></script>
-	<link rel="icon" type="image/png" href="./favicon.ico"/>
+	<script src="https://kit.fontawesome.com/c818a94a41.js" crossorigin="anonymous"></script>	
 </head>
 <body>	 	
 	
@@ -221,4 +227,3 @@
 <script src="js/jquery-3.5.1/jquery-3.5.1.min.js"></script>
 <script src="js/bootstrap-4.4.1/bootstrap.min.js"></script>
 <script src="js/form.js"></script>
-<script src="https://smtpjs.com/v3/smtp.js"></script>
