--- a/index.html
+++ b/index.html
@@ -22,18 +22,20 @@
 	<script src="https://kit.fontawesome.com/c818a94a41.js" crossorigin="anonymous"></script>	
 </head>
 <body>	 	
-		<input id="menu-hamburguer" type="checkbox">
+		<div>
+			<input id="menu-hamburguer" type="checkbox">
 		<label for="menu-hamburguer">
 			<div class="menu">
 				<span class="hamburguer"></span>
 			</div>
 		</label>
 
-		<ul class="menu-opcoes">
+		<ul class="menu-opcoes" id="menu-opcoes">
 			<li><a href="#perfil">SOBRE</a></li>
 			<li><a href="#cursos">CURSOS</a></li>
 			<li><a href="#servicos">SERVIÇOS</a></li>			
 		</ul>
+		</div>
 		
 
 		<section id="perfil" class="perfil">
