--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="google-site-verification" content="wfxMg5zoPpy9zbFbQDeRCSYU7WKy3NvqTZ9EHdAl7S4"> 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="Especialista em Marketing Político, Jornalista, Comunicador, Assessoria de Imprensa">
 	<meta name="robots" content="index, follow">	
 	<meta name="googlebot" content="index, follow">
